# smilengscoriing

./: CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_api.py  run_frontend.py
app/: __init__.py  main.py
app/api/: routes.py
app/models/: types.py
app/services/: __init__.py  azure_speech.py  openai_grader.py
app/utils/: config.py
frontend/: streamlit_app.py
